--- a/index.html
+++ b/index.html
@@ -4,86 +4,85 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Joel Mero -> Mis Proyectos</title>
-	<link rel="icon" href="media/elaina.jpg">
+	<link rel="icon" href="media/icon.png">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<header>
-		<nav class="navegacion">
-			<a class="enlace" href="#">Acerca de</a>
-			<a class="enlace" href="#">Mis proyectos</a>
-			<a class="enlace" href="#">Contactame</a>
+		<nav class="navigation">
+			<a class="link" href="#">About</a>
+			<a class="link" href="#">My Proyects</a>
+			<a class="link" href="#">Contact</a>
 		</nav>
-		<div class="nombre">
-			<h1 class="titulo">Joel Mero</h1>
-			<p class="parrafo">Diseñador Web</p>			
+		<div class="name">
+			<h1 class="title">Fernando Mero</h1>
+			<p class="paragraph">Web Developer</p>			
 		</div>
 	</header>
 	<main>
-		<section class="acerca-de">
-			<img class="imagen" src="media/transparencia.png" alt="Mi fotografia">
-			<article class="articulo">
-				<h2 class="titulo">Acerca de</h2>
-				<p class="parrafo">
-					Lorem ipsum dolor, sit amet consectetur <a class="enlace" href="#">adipisicing</a>, elit. Pariatur non voluptates accusantium nostrum quos, sunt, at dolorum, tempore quasi quaerat laborum unde ipsum? Laborum natus saepe <a class="enlace" href="#">adipisci ea</a> quisquam quod.
+		<section class="about">
+			<img class="image" src="media/transparencia.png" alt="My Photo">
+			<article class="article">
+				<h2 class="title">About me</h2>
+				<p class="paragraph">
+					I help interested and innovative clients <a class="link" href="https://www.workana.com/freelancer/6c171c074d558a9e217924f407440f4a">around the world</a> to create or modify applications and websites that increase the growth of their businesses, so they can have more stability and autonomy in their lives doing what they are passionate about :)
 				</p>
 			</article>
 		</section>
-		<section class="mis-proyectos">
-			<h2 class="titulo">Mis Proyectos</h2>
-			<div class="proyectos">
-				<!-- Proyecto 1 -->
-				<a href="https://ketteiprot.github.io/CSSpracticaDos/" class="proyecto">
-					<img class="imagen" src="media/proyectos/css-dos.jpg" alt="Proyecto Dos de CSS3"> 
-					<h3 class="nombre-proyecto">Blog Avanzado</h3>
-					<p class="parrafo">HTML - CSS - Flexbox - Grid</p>
+		<section class="my-proyects">
+			<h2 class="title">My Web Desing Proyects</h2>
+			<div class="proyects">
+				<!-- Proyect 1 -->
+				<a href="https://ketteiprot.github.io/CSSpracticaDos/" class="proyect">
+					<img class="image" src="media/proyects/css-dos.jpg" alt="Proyecto Dos de CSS3"> 
+					<h3 class="proyect-name">Layout of a Blog</h3>
+					<p class="paragraph">HTML - CSS - Flexbox - Grid</p>
 				</a>
-				<!-- Proyecto 2 -->
-				<a href="https://ketteiprot.github.io/CSSpracticaUno/" class="proyecto">
-					<img class="imagen" src="media/proyectos/css-uno.jpg" alt="Proyecto Uno de CSS3"> 
-					<h3 class="nombre-proyecto">Blog WordPress</h3>
-					<p class="parrafo">HTML - CSS - Flexbox - Grid</p>
+				<!-- Proyect 2 -->
+				<a href="https://ketteiprot.github.io/CSSpracticaUno/" class="proyect">
+					<img class="image" src="media/proyects/css-uno.jpg" alt="Proyecto Uno de CSS3"> 
+					<h3 class="proyect-name">Layout of a Courses Platform</h3>
+					<p class="paragraph">HTML - CSS - Flexbox - Grid</p>
 				</a>
-				<!-- Proyecto 3 -->
-				<a href="https://ketteiprot.github.io/proyect_2/" class="proyecto">
-					<img class="imagen" src="media/proyectos/proyecto-dos.jpg" alt="Proyecto Blog de Armas"> 
-					<h3 class="nombre-proyecto">Blog de Armas</h3>
-					<p class="parrafo">HTML - CSS - JS - Bootstrap 5</p>
+				<!-- Proyect 3 -->
+				<a href="https://ketteiprot.github.io/proyect_2/" class="proyect">
+					<img class="image" src="media/proyects/proyecto-dos.jpg" alt="Proyecto Blog de Armas"> 
+					<h3 class="proyect-name">Design of a Weapons Gallery</h3>
+					<p class="paragraph">HTML - CSS - JS - Bootstrap 5</p>
 				</a>
-				<!-- Proyecto 4 -->
-				<a href="https://ketteiprot.github.io/proyect_1/" class="proyecto">
-					<img class="imagen" src="media/proyectos/proyecto-uno.jpg" alt="Proyecto Galeria de Girls Frontline"> 
-					<h3 class="nombre-proyecto">Galeria de T-dolls</h3>
-					<p class="parrafo">HTML - CSS - JS</p>
+				<!-- Proyect 4 -->
+				<a href="https://ketteiprot.github.io/proyect_1/" class="proyect">
+					<img class="image" src="media/proyects/proyecto-uno.jpg" alt="Proyecto Galeria de Girls Frontline"> 
+					<h3 class="proyect-name">Design of a Anime Gallery</h3>
+					<p class="paragraph">HTML - CSS - JS</p>
 				</a>
 			</div>
 		</section>
-		<section class="contacto">
-			<h2 class="titulo">Contacto</h2>
-			<form class="formulario">
-				<input class="nombre" type="text" placeholder="Nombre" maxlength="50">
-				<input class="correo" type="email" placeholder="Correo" maxlength="50">
-				<textarea class="area-texto" placeholder="Tu mensaje..." maxlength="500"></textarea>
-				<input class="btn-enviar" type="submit">
+		<section class="contact">
+			<h2 class="title">Contact</h2>
+			<form class="form">
+				<input class="name" type="text" placeholder="Your name" maxlength="50">
+				<input class="email" type="email" placeholder="Your email" maxlength="50">
+				<textarea class="text-area" placeholder="A message for me..." maxlength="500"></textarea>
+				<button class="btn-send" type="submit">Send</button>
 			</form>
 		</section>
 	</main>
 	<footer>
-		<a class="red-social twitter" href="https://twitter.com/?lang=es">
-			<img class="imagen" src="media/iconos/twitter.png" alt="">
+		<a class="social-network workana" href="https://www.instagram.com/">
+			<img class="image" src="media/icons/workana.png" alt="">
 		</a>
-		<a class="red-social facebook" href="https://www.facebook.com/profile.php?id=100008647081532">
-			<img class="imagen" src="media/iconos/facebook.png" alt="">
+		<a class="social-network github" href="https://github.com/KetteiPrOt">
+			<img class="image" src="media/icons/github.png" alt="">
 		</a>
-		<a class="red-social youtube" href="https://www.youtube.com/channel/UCZkbKd_cQq5SoeMV8XsQnoA">
-			<img class="imagen" src="media/iconos/youtube.png" alt="">
-		</a>
-		<a class="red-social github" href="https://github.com/KetteiPrOt">
-			<img class="imagen" src="media/iconos/github.png" alt="">
-		</a>
-		<a class="red-social instagram" href="https://www.instagram.com/">
-			<img class="imagen" src="media/iconos/instagram.png" alt="">
+		<a class="social-network linkedin" href="#">
+			<svg class="image" viewBox="0 0 72 72" xmlns="http://www.w3.org/2000/svg">
+				<g fill="none" fill-rule="evenodd">
+					<path d="M8,72 L64,72 C68.418278,72 72,68.418278 72,64 L72,8 C72,3.581722 68.418278,-8.11624501e-16 64,0 L8,0 C3.581722,8.11624501e-16 -5.41083001e-16,3.581722 0,8 L0,64 C5.41083001e-16,68.418278 3.581722,72 8,72 Z" fill="#007EBB"/>
+					<path d="M62,62 L51.315625,62 L51.315625,43.8021149 C51.315625,38.8127542 49.4197917,36.0245323 45.4707031,36.0245323 C41.1746094,36.0245323 38.9300781,38.9261103 38.9300781,43.8021149 L38.9300781,62 L28.6333333,62 L28.6333333,27.3333333 L38.9300781,27.3333333 L38.9300781,32.0029283 C38.9300781,32.0029283 42.0260417,26.2742151 49.3825521,26.2742151 C56.7356771,26.2742151 62,30.7644705 62,40.051212 L62,62 Z M16.349349,22.7940133 C12.8420573,22.7940133 10,19.9296567 10,16.3970067 C10,12.8643566 12.8420573,10 16.349349,10 C19.8566406,10 22.6970052,12.8643566 22.6970052,16.3970067 C22.6970052,19.9296567 19.8566406,22.7940133 16.349349,22.7940133 Z M11.0325521,62 L21.769401,62 L21.769401,27.3333333 L11.0325521,27.3333333 L11.0325521,62 Z" fill="#FFF"/>
+				</g>
+			</svg>
 		</a>
 	</footer>
 </body>
