Added links to Github repositories of the projects

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
-            // Here I am starting the emailjs service with my public key of my account
+            // Here I am starting the emailjs service with the public key of my account
 			// You can see the public key here: https://dashboard.emailjs.com/admin/account
             emailjs.init('SQEhufhOJNX-BFeFS');
         })();
@@ -45,52 +45,94 @@
 			<h2 class="title" id="myProjectsSectionTitle">My Web Desing Proyects</h2>
 			<div class="projects">
 				<!-- Project -->
-				<a href="https://ketteiprot.github.io/HolaMundoWebCopy/" class="project">
-					<img class="image" src="media/projects/HolaMundoWebCopy.jpg" alt="Proyecto Dos de CSS3"> 
-					<h3 class="project-name">Layout of a Blog</h3>
+				<div class="project">
+					<a href="https://ketteiprot.github.io/HolaMundoWebCopy/" class="website-link">
+						<img class="image" src="media/projects/HolaMundoWebCopy.jpg" title="Visit the live site" alt="HolaMundoWebCopy screenshot"> 
+					</a>
+					<a href="https://github.com/KetteiPrOt/HolaMundoWebCopy" class="github-link" title="See the code in Github">
+						<h3 class="project-name">
+								Layout of a Blog
+						</h3>
+					</a>
 					<p class="paragraph">HTML - CSS - Flexbox - Grid</p>
-				</a>
+				</div>
 				<!-- Project -->
-				<a href="https://ketteiprot.github.io/FalconMastersWebCopy/" class="project">
-					<img class="image" src="media/projects/FalconMastersWebCopy.jpg" alt="Proyecto Uno de CSS3"> 
-					<h3 class="project-name">Layout of a Courses Platform</h3>
+				<div class="project">
+					<a href="https://ketteiprot.github.io/FalconMastersWebCopy/" class="website-link">
+						<img class="image" src="media/projects/FalconMastersWebCopy.jpg" title="Visit the live site" alt="FalconMastersWebCopy screenshot"> 
+					</a>
+					<a href="https://github.com/KetteiPrOt/FalconMastersWebCopy" class="github-link" title="See the code in Github">
+						<h3 class="project-name">
+							Layout of a Courses Platform
+						</h3>
+					</a>
 					<p class="paragraph">HTML - CSS - Flexbox - Grid</p>
-				</a>
+				</div>
 				<!-- Project -->
-				<a href="https://ketteiprot.github.io/DilanRomero/" class="project">
-					<img class="image" src="media/projects/DilanRomero.jpg" alt="Landing Page project image"> 
-					<h3 class="project-name">Design of a Landing Page</h3>
+				<div class="project">
+					<a href="https://ketteiprot.github.io/DilanRomero/" class="website-link">
+						<img class="image" src="media/projects/DilanRomero.jpg" title="Visit the live site" alt="Landing Page project image"> 
+					</a>
+					<a href="https://github.com/KetteiPrOt/DilanRomero" class="github-link" title="See the code in Github">
+						<h3 class="project-name">
+							Design of a Landing Page
+						</h3>
+					</a>
 					<p class="paragraph">HTML - CSS - JS - Flexbox - Grid</p>
-				</a>
+				</div>
 				<!-- Project -->
-				<a href="https://ketteiprot.github.io/weapons/" class="project">
-					<img class="image" src="media/projects/weapons.jpg" alt="Weapons Gallery project image"> 
-					<h3 class="project-name">Design of a Weapons Gallery</h3>
+				<div class="project">
+					<a href="https://ketteiprot.github.io/weapons/" class="website-link">
+						<img class="image" src="media/projects/weapons.jpg" title="Visit the live site" alt="Weapons Gallery project"> 
+					</a>
+					<a href="https://github.com/KetteiPrOt/weapons" class="github-link" title="See the code in Github">
+						<h3 class="project-name">
+							Design of a Weapons Gallery
+						</h3>
+					</a>
 					<p class="paragraph">HTML - CSS - JS - Bootstrap 5</p>
-				</a>
+				</div>
 				<!-- Project -->
-				<a href="https://ketteiprot.github.io/AnimeGallery/" class="project">
-					<img class="image" src="media/projects/AnimeGallery.jpg" alt="Anime Gallery project image"> 
-					<h3 class="project-name">Design of a Anime Gallery</h3>
+				<div class="project">
+					<a href="https://ketteiprot.github.io/AnimeGallery/" class="website-link">
+						<img class="image" src="media/projects/AnimeGallery.jpg" title="Visit the live site" alt="Anime Gallery project image"> 
+					</a>
+					<a href="https://github.com/KetteiPrOt/AnimeGallery" class="github-link" title="See the code in Github">
+						<h3 class="project-name">
+							Design of a Anime Gallery
+						</h3>
+					</a>
 					<p class="paragraph">HTML - CSS - JS - Flexbox</p>
-				</a>
+				</div>
 				<!-- Project -->
-				<a href="https://ketteiprot.github.io/ittlc/" class="project">
-					<img class="image" src="media/projects/ittlc.jpg" alt="Anime Gallery project image"> 
-					<h3 class="project-name">Design of a institutional page</h3>
+				<div class="project">
+					<a href="https://ketteiprot.github.io/ittlc/" class="website-link">
+						<img class="image" src="media/projects/ittlc.jpg" title="Visit the live site" alt="Institutional website project"> 
+					</a>
+					<a href="https://github.com/KetteiPrOt/ittlc" class="github-link" title="See the code in Github">
+						<h3 class="project-name">
+							Design of a institutional page
+						</h3>
+					</a>
 					<p class="paragraph">HTML - CSS - JS - Flexbox - Grid</p>
-				</a>
+				</div>
 			</div>
 		</section>
 		<section class="my-projects web-development">
 			<h2 class="title">My Web Development Proyects</h2>
-			<div class="projects">
+			<div class="projects">				
 				<!-- Project -->
-				<a href="https://github.com/KetteiPrOt/sysliquor" class="project">
-					<img class="image" src="media/projects/liquorStore.jpg" alt="SysLicor project image"> 
-					<h3 class="project-name">Inventory Managment System</h3>
+				<div class="project">
+					<a href="https://github.com/KetteiPrOt/sysliquor" class="website-link">
+						<img class="image" src="media/projects/liquorStore.jpg" title="Visit the live site" alt="SysLicor project image"> 
+					</a>
+					<a href="https://github.com/KetteiPrOt/sysliquor" class="github-link" title="See the code in Github">
+						<h3 class="project-name">
+							Inventory Managment System
+						</h3>
+					</a>
 					<p class="paragraph">Tailwind - Blade - PHP - Laravel - SQL</p>
-				</a>
+				</div>
 			</div>
 		</section>
 		<section class="contact">
