Added flags for Github links

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<a href="https://ketteiprot.github.io/HolaMundoWebCopy/" class="website-link">
 						<img class="image" src="media/projects/HolaMundoWebCopy.jpg" title="Visit the live site" alt="HolaMundoWebCopy screenshot"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/HolaMundoWebCopy" class="github-link" title="See the code in Github">
+					<a class="github-link" href="https://github.com/KetteiPrOt/HolaMundoWebCopy">
 						<h3 class="project-name">
 								Layout of a Blog
 						</h3>
@@ -61,7 +61,7 @@
 					<a href="https://ketteiprot.github.io/FalconMastersWebCopy/" class="website-link">
 						<img class="image" src="media/projects/FalconMastersWebCopy.jpg" title="Visit the live site" alt="FalconMastersWebCopy screenshot"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/FalconMastersWebCopy" class="github-link" title="See the code in Github">
+					<a href="https://github.com/KetteiPrOt/FalconMastersWebCopy" class="github-link">
 						<h3 class="project-name">
 							Layout of a Courses Platform
 						</h3>
@@ -73,7 +73,7 @@
 					<a href="https://ketteiprot.github.io/DilanRomero/" class="website-link">
 						<img class="image" src="media/projects/DilanRomero.jpg" title="Visit the live site" alt="Landing Page project image"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/DilanRomero" class="github-link" title="See the code in Github">
+					<a href="https://github.com/KetteiPrOt/DilanRomero" class="github-link">
 						<h3 class="project-name">
 							Design of a Landing Page
 						</h3>
@@ -85,7 +85,7 @@
 					<a href="https://ketteiprot.github.io/weapons/" class="website-link">
 						<img class="image" src="media/projects/weapons.jpg" title="Visit the live site" alt="Weapons Gallery project"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/weapons" class="github-link" title="See the code in Github">
+					<a href="https://github.com/KetteiPrOt/weapons" class="github-link">
 						<h3 class="project-name">
 							Design of a Weapons Gallery
 						</h3>
@@ -97,7 +97,7 @@
 					<a href="https://ketteiprot.github.io/AnimeGallery/" class="website-link">
 						<img class="image" src="media/projects/AnimeGallery.jpg" title="Visit the live site" alt="Anime Gallery project image"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/AnimeGallery" class="github-link" title="See the code in Github">
+					<a href="https://github.com/KetteiPrOt/AnimeGallery" class="github-link">
 						<h3 class="project-name">
 							Design of a Anime Gallery
 						</h3>
@@ -109,7 +109,7 @@
 					<a href="https://ketteiprot.github.io/ittlc/" class="website-link">
 						<img class="image" src="media/projects/ittlc.jpg" title="Visit the live site" alt="Institutional website project"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/ittlc" class="github-link" title="See the code in Github">
+					<a href="https://github.com/KetteiPrOt/ittlc" class="github-link">
 						<h3 class="project-name">
 							Design of a institutional page
 						</h3>
@@ -123,10 +123,10 @@
 			<div class="projects">				
 				<!-- Project -->
 				<div class="project">
-					<a href="https://github.com/KetteiPrOt/sysliquor" class="website-link">
-						<img class="image" src="media/projects/liquorStore.jpg" title="Visit the live site" alt="SysLicor project image"> 
+					<a href="https://github.com/KetteiPrOt/sysliquor" class="website-link" title="See the code in Github :)">
+						<img class="image" src="media/projects/liquorStore.jpg" alt="SysLicor project image"> 
 					</a>
-					<a href="https://github.com/KetteiPrOt/sysliquor" class="github-link" title="See the code in Github">
+					<a href="https://github.com/KetteiPrOt/sysliquor" class="github-link">
 						<h3 class="project-name">
 							Inventory Managment System
 						</h3>
