Added project Weapons Remake [in building]

--- a/index.html
+++ b/index.html
@@ -133,6 +133,18 @@
 					</a>
 					<p class="paragraph">Tailwind - Blade - PHP - Laravel - SQL</p>
 				</div>
+				<!-- Project -->
+				<div class="project">
+					<a href="https://github.com/KetteiPrOt/WeaponsGallery" class="website-link" title="See the code in Github :)">
+						<img class="image" src="media/projects/WeaponsGallery.jpg" alt="SysLicor project image"> 
+					</a>
+					<a href="https://github.com/KetteiPrOt/WeaponsGallery" class="github-link">
+						<h3 class="project-name">
+							Weapons remake [in building]
+						</h3>
+					</a>
+					<p class="paragraph">Tailwind - Blade - PHP - Laravel</p>
+				</div>
 			</div>
 		</section>
 		<section class="contact">
