--- a/index.html
+++ b/index.html
@@ -33,7 +33,30 @@
 	<main>
 		<section class="about">
 			<!-- My Photo -->
-			<img class="image" src="media/transparencia.png" alt="My Photo">
+			<div class="loading-image" id="loadingImage">
+				<svg 
+					version="1.0" xmlns="http://www.w3.org/2000/svg"
+					viewBox="0 0 1280.000000 1198.000000"
+					preserveAspectRatio="xMidYMid meet"
+				>
+					<g 
+						transform="translate(0.000000,1198.000000) scale(0.100000,-0.100000)"
+						fill="#BCBCBC" stroke="none">
+						<path d="M6135 11969 c-968 -79 -1859 -621 -2388 -1453 -142 -223 -273 -510
+						-352 -771 -161 -532 -171 -1138 -29 -1760 87 -381 215 -735 404 -1120 524
+						-1067 1317 -1812 2149 -2020 312 -78 650 -78 962 0 446 112 879 374 1279 775
+						684 685 1201 1736 1340 2727 127 904 -94 1749 -640 2443 -105 134 -374 402
+						-510 510 -624 495 -1415 734 -2215 669z"/>
+						<path d="M5955 4204 c-869 -43 -1476 -117 -2130 -260 -2373 -521 -3876 -1687
+						-3822 -2964 23 -541 328 -830 982 -934 205 -33 344 -41 710 -41 459 1 746 18
+						1685 100 1311 115 1798 146 2577 166 333 9 553 9 885 0 780 -20 1267 -51 2578
+						-166 939 -82 1226 -99 1685 -100 450 0 644 17 900 79 564 138 818 466 792
+						1025 -44 949 -918 1821 -2422 2416 -916 362 -2007 587 -3225 665 -161 11
+						-1055 21 -1195 14z"/>
+					</g>
+				</svg>
+			</div>
+			<img class="image" id="image" src="media/transparencia.png" alt="My Photo">
 			<article class="article">
 				<h2 class="title" id="aboutSectionTitle">About me</h2>
 				<p class="paragraph">
@@ -175,5 +198,27 @@
 			</svg>
 		</a>
 	</footer>
+	<!-- <div style="background-color: green; color: white;">
+		Hola Mundo! <br><br>
+
+		<img style="display: none;" id="image" src="https://images4.alphacoders.com/106/106248.jpg">
+		<div id="loadingElement">
+			<svg class="animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+				<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+				<path fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+			</svg> Loading image...
+		</div>
+	</div>
+	<script>
+		// const image = document.getElementById('image'),
+		// 	  loadingElement = document.getElementById('loadingElement');
+
+		// image.addEventListener('load', () => {
+		// 	loadingElement.style.display = 'none';
+		// 	image.style.display = 'block';
+		// 	console.log('The image has been charged!');
+		// });
+	</script>
+	<script src="js/loadingImages.js"></script> -->
 </body>
 </html>
