--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 		// 	image.style.display = 'block';
 		// 	console.log('The image has been charged!');
 		// });
-	</script>
-	<script src="js/loadingImages.js"></script> -->
+	</script> -->
+	<script src="js/loadingImages.js"></script>
 </body>
 </html>
