Fixed photo load image Bug

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					</g>
 				</svg>
 			</div>
-			<img class="image" id="image" src="media/transparencia.png" alt="My Photo">
+			<img class="image" id="image" src="media/photo.jpg" alt="My Photo">
 			<article class="article">
 				<h2 class="title" id="aboutSectionTitle">About me</h2>
 				<p class="paragraph">
